Handle unknown column order
Signed-off-by: NathanDissoubray <nathan.dissoubray@rte-france.com>